--- a/gratest/index.html
+++ b/gratest/index.html
@@ -67,6 +67,15 @@
       <div class="toast" id="toast" role="status" aria-live="polite"></div>
     </div>
 
+    <div class="overlay" id="overlay" aria-hidden="true">
+      <div class="overlay__backdrop"></div>
+      <div class="overlay__card" role="dialog" aria-modal="true" aria-label="Menu">
+        <div class="overlay__title" id="overlayTitle">Statki</div>
+        <div class="overlay__body" id="overlayBody"></div>
+        <div class="overlay__actions" id="overlayActions"></div>
+      </div>
+    </div>
+
     <div class="toast" id="fileWarning" role="status" aria-live="polite" style="bottom:64px"></div>
 
     <script>
