--- a/gratest/index.html
+++ b/gratest/index.html
@@ -70,6 +70,7 @@
     <div class="overlay" id="overlay" aria-hidden="true">
       <div class="overlay__backdrop"></div>
       <div class="overlay__card" role="dialog" aria-modal="true" aria-label="Menu">
+        <button class="overlay__close btn btn--ghost" id="overlayClose" type="button" aria-label="Zamknij">Zamknij</button>
         <div class="overlay__title" id="overlayTitle">Statki</div>
         <div class="overlay__body" id="overlayBody"></div>
         <div class="overlay__actions" id="overlayActions"></div>
