--- a/gratest/index.html
+++ b/gratest/index.html
@@ -24,6 +24,7 @@
             <div class="panel__title">Ty</div>
             <div class="panel__meta" id="playerMeta"></div>
           </div>
+          <div class="panel__ships" id="playerShips" aria-label="Twoje statki"></div>
           <div class="board" id="playerBoard" aria-label="Twoja plansza"></div>
 
           <div class="toolbar" id="placementToolbar">
@@ -48,6 +49,7 @@
             <div class="panel__title">Przeciwnik</div>
             <div class="panel__meta" id="enemyMeta"></div>
           </div>
+          <div class="panel__ships" id="enemyShips" aria-label="Statki przeciwnika"></div>
           <div class="board board--interactive" id="enemyBoard" aria-label="Plansza przeciwnika"></div>
 
           <div class="status" id="status"></div>
